Actualizacion de Porfolio

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     --surface-container-high: #e7e8ea;
     --surface-container-highest: #e1e3e4;
   }
+
 </style>
 
 <body class="light">
@@ -111,8 +112,8 @@
     <div class="tooltip top">Incio</div>
   </a>
   <dialog class="max" id="dialog-porfolio">
-    <h5>Fullscreen</h5>
-    <div>Some text here</div>
+    <h5>Porfolio</h5>
+    <card-porfolio></card-porfolio>
     <nav class="right-align">
       <button class="border" data-ui="#dialog-porfolio">Cancel</button>
       <button data-ui="#dialog-porfolio">Confirm</button>
